Fixes #34 Applied overflow ellipsis

--- a/src/style.sass
+++ b/src/style.sass
@@ -73,7 +73,7 @@ a.anchor
   img
     height: 100%
 
-.courses-name
+// .courses-name
   margin-left: 16px
 
 .courses-info
@@ -85,12 +85,15 @@ a.anchor
 .courses-info
   height: 30px
   margin-top: 16px
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
+
+  .courses-name
+    margin-left: 16px
 
   img
     height: 100%
-
-.courses-name
-  margin-top: 16px
 
 .certificates-info
   height: 30px
@@ -109,6 +112,9 @@ a.anchor
 .cert-name
   margin: 16px 0 0
   height: 30px
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
 
   .cert-icon
     height: 100%
